--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
+div{
+    height: 100px;
+    width: 100px;
+    background-color: pink;
+    border: 2px solid black;
+    display: inline-block;
+}
+
 #box1{
+    position: static;
+}
+
+/*#box1{
     height: 100px;
     width: 200px;
     background-color: green;
@@ -10,7 +22,7 @@
     width: 30%;
     background-color: yellow;
     margin: 10%;
-    font-size: 1em;/* ,0.5,2 times parents font size*/
+    font-size: 1em;/* ,0.5,2 times parents font size
     width: 5em;
-    height: 1vh;
+    height: 100vh;
 }
