--- a/style.css
+++ b/style.css
@@ -5,9 +5,30 @@ div{
     border: 2px solid black;
     display: inline-block;
 }
-
 #box1{
+    background-image: url("panda_image.jpg");
+    background-size:cover;
+    background-repeat: no-repeat;
+}
+
+/*#box1{
     position: static;
+}
+#box2{
+    position: relative;
+    top: 20px;
+    left: 10px;
+    z-index: 1;
+}
+#box3{
+    position: absolute;
+    top: 500px;
+    left: 20px;
+}
+#box4{
+    position: fixed;
+    top:50px;
+    z-index: 3;
 }
 
 /*#box1{
